Fix gender layout issue

--- a/assets/sass/components/_my-account.scss
+++ b/assets/sass/components/_my-account.scss
@@ -58,6 +58,7 @@ form.sms-verification-code-form {
 
         .form-label {
             display: inline-block;
+            margin-right: 3rem;
         }
 
         .form-item {
@@ -70,7 +71,7 @@ form.sms-verification-code-form {
 
             .radio-inline {
                 display: inline-block;
-                margin-left: 3rem;
+                margin-right: 3rem;
             }
         }
 
